# mrover-workspace

base_station/gui/src/static/: rover_msgs.json
beaglebone/spectral/src/: __main__.py
config/nav/: config.json
jetson/nav/: main.cpp  meson.build  rover.cpp  stateMachine.cpp  stateMachine.hpp  test_nodes.cpp  test_nodes.h  utilities.cpp
jetson/nav/gate_search/: gateStateMachine.cpp
jetson/nav/obstacle_avoidance/: obstacleAvoidanceStateMachine.cpp  obstacleAvoidanceStateMachine.hpp  simpleAvoidance.cpp
jetson/nav/search/: searchStateMachine.cpp
jetson/nav/src/: action_node.cpp
jetson/nav/src/controls/: fallback_node.cpp
jetson/percep/: artag_detector.cpp  camera.cpp  main.cpp  pcl.cpp
onboard/nucleo_bridge/: controller.h
rover_msgs/: MosfetCmd.lcm
simulators/nav/src/components/lcm_center/: ObstacleLCM.vue
simulators/nav/src/components/perception/: obstacle_detector.ts
simulators/nav/src/store/modules/: roverState.ts
simulators/nav/src/utils/: types.ts
